# Unhinged

./: .coverage  .gitignore  .pre-commit-config.yaml  =0.4.0  =6.0  ARCHITECTURE_SUMMARY.md  AUDIO_RECORDING_REGRESSION_ANALYSIS.md  AUDIT_LETTER_TO_TEAM.txt  AUTONOMOUS_LOOP_FINAL_SUMMARY.md  AUTONOMOUS_LOOP_IMPLEMENTATION_COMPLETE.md  BACKEND_BUILD_SUCCESS.md  BLUETOOTH_IMPLEMENTATION_GUIDE.md  BLUETOOTH_WORKSPACE_ARCHITECTURE.md  BLUETOOTH_WORKSPACE_COMPLETE_SUMMARY.md  BLUETOOTH_WORKSPACE_IMPLEMENTATION.md  BLUETOOTH_WORKSPACE_INTEGRATION.md  BLUETOOTH_WORKSPACE_PHASE2_COMPLETE.md  BLUETOOTH_WORKSPACE_PHASE3_COMPLETE.md  BLUETOOTH_WORKSPACE_SUMMARY.md  BRANCH_ANALYSIS.md  CENTRALIZED_PYTHON_ENV_FIXED.md  CHECKPOINT-STATUS.md  CLI_MIGRATION_ANALYSIS.md  CODE_AUDIT_TYPE_SAFETY_VERIFICATION.md  CRITICAL_ANALYSIS_AND_HARDENING_DAG.md  DASHBOARD-README.md  DEDUPLICATION_SUMMARY.md  DEPRECATED.md  DESIGN_SYSTEM_FIX_ACTION_PLAN.md  DEVELOPMENT.md  DIRECTION.md  DOMAIN_ISOLATION_ARCHITECTURE.md  E2E_ARCHITECTURE_ANALYSIS.md  EVENT_BUS_AND_LOGGING_INTEGRATION.md  FINAL_SESSION_SUMMARY.md  FOLDER_STRUCTURE_ANALYSIS.md  FORM_INPUT_IMPLEMENTATION_SUMMARY.md  GENERATE_COMMAND.md  GPU_MEMORY_OPTIMIZATION.md  GRAPH_EDITOR_DELIVERY_SUMMARY.md  (+148 more)
.augment/: README.md  agent-instructions.md  config.json  essence-of-computer-science.llm  llm-format-spec.md  mcp-config.json  wisdom-of-ancients.md
.build-cache/: metadata.json
.build-metrics/: build_metrics.jsonl
.jupyter/: jupyter_lab_config.py
.llmdocs-backup/: LLM_MASTER_PROMPT.md  MAKEFILE_DEPENDENCY_CHAIN_COMPLETE.md  README.md
.llmdocs-backup/libs/graphics/tests/: CMakeLists.txt  bench_main.c
adapters/: context-adapter.ts
backend/: Dockerfile  PROJECT_STRUCTURE.md  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
cdc-service/: package.json
cli/: __init__.py  __main__.py  session.py
control/: README.md  __init__.py  __main__.py  config.py  conversation_cli.py  cultural_enforcement.py  dag.py  enhanced_vm_launcher.py  generate_cli.py  human.py  native_c_launcher.py  open.sh  proxy_server.py  qemu_vm_launcher.py  server.py  service_health_monitor.py  service_launcher.py  start_unhinged_services.py  system_browser.py  unhinged_launcher.py  vm_monitor.py
core/: dsl-interpreter.ts
data-lake/: README.md
desktop/: auto_updater.py  create-distribution-package.sh  debug-unhinged-app.py  test-desktop-app.py  test-minimal-gtk.py  unhinged-desktop-app  unhinged-desktop-launcher  unhinged.desktop  version.json
docs/: ARCHITECTURAL_REASONING.md  AUDIO_DEVICE_COMPATIBILITY.md  AUTONOMOUS_LOOP_GUIDE.md  DESIGN_SYSTEM_PATTERN.md  DOCUMENT_CREATION_FIELDS.md  DOCUMENT_MANAGEMENT_ARCHITECTURE.md  DOCUMENT_MANAGEMENT_COMPONENT_SPECS.md  DOCUMENT_MANAGEMENT_IMPLEMENTATION_COMPLETE.md  DOCUMENT_MANAGEMENT_INDEX.md  DOCUMENT_MANAGEMENT_SUMMARY.md  DOCUMENT_MANAGEMENT_VISUAL_GUIDE.md  DOCUMENT_MANAGEMENT_YAML_EXAMPLES.md  DOCUMENT_RENDERER_GUIDE.md  DOCUMENT_WORKSPACE_COMPLETE_VISION.md  DOCUMENT_WORKSPACE_FIXES.md  DOCUMENT_WORKSPACE_IMPLEMENTATION.md  DOCUMENT_WORKSPACE_REFINEMENT.md  ENVIRONMENT_SETUP_GUIDE.md  GUI_VISUALIZATION_OVERVIEW.md  IMAGE_VIDEO_GENERATION_ROADMAP.md  LAST_UPDATE.md  OBSERVABILITY_SUMMARY.md  PERSISTENCE_PHASE_2_COMPLETE.md  PERSISTENCE_PHASE_2_PLAN.md  PERSISTENCE_PLATFORM_COMPLETE.md  PERSISTENCE_PLATFORM_MIGRATION.md  README.md  REGISTRY_UI_IMPLEMENTATION.md  REGISTRY_UI_QUICK_REFERENCE.md  SERVICE_FRAMEWORK_TIMEOUT_ARCHITECTURE.md  SERVICE_STARTUP_GUIDE.md  SESSION_SUMMARY_DOCUMENT_WORKSPACE.md  SMCI_MEETING_SPEC_SHEET.md  TIMEOUT_CONFIGURATION_GUIDE.md  TIMEOUT_FIX_SUMMARY.md  TIMEOUT_IMPLEMENTATION_COMPLETE.md  WORKSPACE_STATE_IMPLEMENTATION_ROADMAP.md  WORKSPACE_STATE_MANAGEMENT_DESIGN.md  WORKSPACE_TABS_CORRECTION.md  WORKSPACE_TABS_FIX_SUMMARY.md  (+16 more)
electron/: index.html  main.ts  package.json  preload.js  renderer.ts  tsconfig.main.json
examples/: gmail_to_social_post.py
frontend/: Dockerfile  Dockerfile.dev  IMAGE_UPLOAD_DOCUMENTATION.md  SCREENSHOT_VISION_SYSTEM.md  THEME_SYSTEM_DOCUMENTATION.md  jest.config.js  package-lock.json  package.json  playwright.config.ts  test-audio-simple.js  tsconfig.json  webpack.config.js
generators/: ui-schema-gen.ts
integrations/: backend-client.ts
kafka/: docker-compose.kafka.yml  init-cdc.sql
libs/: __init__.py
libs/event-framework/python/: README.md  pyproject.toml
libs/event-framework/python/src/events/: __init__.py  event_logger.py  gui_session_logger.py  io_abstraction.py  protobuf_integration.py
libs/event-framework/python/src/unhinged_events/: __init__.py  event_logger.py  gui_integration.py
libs/event-framework/python/tests/: test_event_logger.py  test_gui_session_logger.py
libs/graphics/: CMakeLists.txt  README.md
libs/graphics/examples/: CMakeLists.txt  hello_world.c  memory_pools.c  performance_test.c  simd_comparison.c
libs/graphics/include/: unhinged_graphics.h
libs/graphics/python/: unhinged_graphics.py
libs/graphics/src/color/: blending.c  color_space.c  conversion.c
libs/graphics/src/core/: error.c  memory.c  memory_pools.c  platform.c
libs/graphics/src/platform/: linux_drm.c  window.c
libs/graphics/src/raster/: primitives.c
libs/graphics/tests/: test_main.c  test_primitives.c
llm/: Dockerfile
orchestration/: docker-compose.development.yml  docker-compose.production.yml
proto/: DAG_IMPLEMENTATION_COMPLETE.md  GRAPH_MENTAL_MODEL.md  README.md  build-gateway.sh  build.sh  build_chat.sh  cdc_events.proto  cdc_service.proto  context_service.proto  document_store.proto  gateway_annotations.proto  graph_service.proto  image_generation.proto  llm.proto  minimal_event.proto  observability.proto  universal_event.proto  vision_service.proto
renderers/: react-renderer.tsx
research-orchestrator/: README.md  WORKFLOW_DEMO.md  artifact_generator.py  config.py  example_monaco.py  orchestrator.py  perplexity_client.py  requirements.txt  setup.py
schema/: universal-system.yml
scription/: README.md
scripts/: add-version-headers.sh  dev.sh  (+25 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
(+1415 files in other folders)
