[package]
name = "grpc-tool"
version = "0.1.0"
description = "Professional gRPC client with server reflection and localhost service discovery"
authors = ["Unhinged Team"]
license = "MIT"
repository = "https://github.com/unhinged/grpc-tool"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
tonic = "0.12"
tonic-reflection = "0.12"
prost = "0.13"
prost-types = "0.13"
bytes = "1.0"
futures = "0.3"
tokio-stream = "0.1"
tokio-util = "0.7"
socket2 = "0.5"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
